Refactor ProfileController, implement remaining TODOs, and fix null safety warnings
- Refactor ProfileController: Remove old commented-out code.
- SubscriptionServiceImpl: Implement vocabulary count retrieval (TODO).
- CreditServiceImpl: Implement actual daily chat usage calculation (TODO).
- SupabaseAdminService: Implement pagination for checkEmailExists (TODO).
- Fix null safety warnings across multiple services (Credit, Payment, Quota, Subscription, Vocabulary, TestAttempt, AdminContent).
- Suppress necessary null warnings in services where logic ensures safety.